<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_email"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal"
            android:hint="@string/send_email"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:id="@+id/reset_button"
            android:textColor="#fff"
            android:background="@color/toolbar"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#C44CAF50"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:textSize="14dp"
            android:text="@string/reset_text_hint" />
    </LinearLayout>
</LinearLayout>